@@ -2679,13 +2679,19 @@ void FileList::ProcessEnter(bool EnableExec,bool SeparateWindow,bool EnableAssoc
 
 			if (IsItExecutable || SeparateWindow || Global->Opt->UseRegisteredTypes)
 			{
-				QuoteSpace(strFileName);
-
 				execute_info Info;
 				Info.Command = strFileName;
 				Info.WaitMode = PluginMode? Info.wait_finish : Info.no_wait;
 				Info.NewWindow = SeparateWindow;
 				Info.RunAs = RunAs;
+
+				// Here we definitely know that we're about to launch an actual file,
+				// (as manually typed commands are processed elsewhere), so launcher shall NOT try to search for it.
+				// However, we can't simply set ExecMode to 'direct' as we need to know image type anyway
+				// to launch it silently or in console mode.
+				// So, to avoid introducing some new additional weird flags, we just use the full file name:
+				ConvertNameToFull(Info.Command, Info.Command);
+				QuoteSpace(Info.Command);
 
 				Parent()->GetCmdLine()->ExecString(Info);
 				
