@@ -1,4 +1,8 @@
-﻿svs 23.05.2016 15:51:37 +0300 - build 4689
+drkns 23.05.2016 18:05:10 +0200 - build 4690
+
+1. Уточнение работы запускателя.
+
+svs 23.05.2016 15:51:37 +0300 - build 4689
 
 1. SQLite 3.13.0
 
